# ShapeOpPlus

./: .gitignore  CMakeLists.txt  README.md  fair_mesh_design.off  geodesic_path.off  minimal_surface.off  quad_planarization.off  test_minres
.github/workflows/: ci.yml  pages.yml
applications/: CMakeLists.txt
applications/opengl/: CMakeLists.txt
doc/: DoxyShapeOp  libShapeOp.dox  main.dox
examples/: CMakeLists.txt  README.md  area_equalization  area_equalization.cpp  as_area_preserving_as_possible_mapping  as_area_preserving_as_possible_mapping.cpp  as_conformal_as_possible_mapping  as_conformal_as_possible_mapping.cpp  as_rigid_as_possible_mapping  as_rigid_as_possible_mapping.cpp  as_similar_as_possible_mapping  as_similar_as_possible_mapping.cpp  as_smooth_as_possible_mapping  as_smooth_as_possible_mapping.cpp  capabilities_showcase.cpp  catenary_curve.py  circular_quads  circular_quads.cpp  cloth_simulation.cpp  common.h  equilateral_regularization  equilateral_regularization.cpp  fair_mesh_design  fair_mesh_design.cpp  geodesic_path  geodesic_path.cpp  minimal_surface  minimal_surface.cpp  quad_planarization  quad_planarization.cpp  shape_transfer
libShapeOp/: CMakeLists.txt  FindEigen3.cmake
libShapeOp/api/: API.cpp
libShapeOp/bindings/: CMakeLists.txt
libShapeOp/bindings/c/: runmeC
libShapeOp/bindings/c++/: runmeCPP
libShapeOp/bindings/csharp/: CMakeLists.txt
libShapeOp/bindings/java/: CMakeLists.txt
libShapeOp/bindings/python/: CMakeLists.txt  runme.py  shapeopPython.py
libShapeOp/src/: Constraint.cpp  Constraint.h  LSSolver.cpp  LSSolver.h  Solver.cpp  Solver.h
tests/: CMakeLists.txt  CTestTestfile.cmake  cmake_test_discovery_e0a22a9269.json  test_constraints.cpp  test_minres_eigen.cpp  test_solver.cpp  unit_tests[1]_include.cmake  unit_tests[1]_tests.cmake
